--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ matplotlib==3.3.4
 numpy==1.19.2
 pandas==1.2.3
 scipy==1.6.1
+statsmodels==0.12.2
 
 # Machine learning packages
 scikit-learn==0.23.2
+tensorflow==2.3.0
 
 # Prettier visualizations
 seaborn==0.11.1
